Minor changes. Added exception handler and Dockerfile